# canonical-indico-login-plugin

./: setup.cfg
canonical_indico_login/: plugin.py
canonical_indico_login/templates/: canonical_login_selector.html
