[metadata]
name = canonical-indico-login-plugin
version = 0.0.1
url = https://github.com/weiiwang01/canonical-indico-login-plugin
license = Apache 2.0
author = Weii Wang
author_email = weii.wang@canonical.com

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    canonical_login = canonical_indico_login.plugin:CanonicalLoginPlugin
